syntax = "proto3";

package oneof_types;

enum SimpleEnum {
  ZERO = 0;
  FOO = 1;
  BAR = 2;
  BAZ = 3;
}

message SimpleMessage {
  int32 a = 1;
}

message OneofTypes {
  int32 f_int32 = 1;

  oneof test_oneof {
    int32 oneof_int32 = 2;
    uint32 oneof_uint64 = 3;
    string oneof_string = 4;
    bytes oneof_bytes = 5;
    SimpleEnum oneof_enum = 6;
    SimpleMessage oneof_message = 7;
  }
}
